--- a/sapphire/static/css/style.css
+++ b/sapphire/static/css/style.css
@@ -170,6 +170,10 @@ a:hover{
     color: #6e6e6e;
 }
 
+.messages{
+    margin: 10px auto;
+}
+
 .product:hover{
     box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.80);
 }
@@ -323,6 +327,32 @@ a {
 
   .order-form{
       padding: 15px 7%;
+  }
+
+  .order-form-btn {
+      background-color: #464646;
+      color: white;
+      border-radius: 10px;
+      margin: 20px 0px;
+      border: none;
+      padding: 7px 30px;
+      text-align: right;
+  }
+
+  .oredr-desc{
+      height: 100px;
+      width: 100%;
+      margin: 15px 0px;
+      border-radius: 5px;
+      border: solid #464646 2px;
+  }
+
+  .tutorial{
+      margin: 50px 7%;
+  }
+
+  iframe{
+    margin: 50px 7%;
   }
 
   @media (max-width: 900px) {
