--- a/templates/order/order.html
+++ b/templates/order/order.html
@@ -6,12 +6,16 @@
         <div class="order-head">
             Your Order
         </div>
-        <form class="order-form">
-            <input class="login-email" type="text" placeholder="Item"></input>
-            <input class="login-password" type="text" placeholder="Client"></input>
-            <input class="login-password" type="text" placeholder="Phone NO."></input>
-            <input class="login-password" type="email" placeholder="email"></input>
-            <input class="login-password" type="textfield" placeholder="description"></input>
+    
+        <form action=" {% url 'ordered' %} " class="order-form" method="POST">
+            {% csrf_token %} 
+            <input name="item" class="login-email" type="text" placeholder="Item"></input>
+            <input name="client" class="login-password" type="text" placeholder="Client"></input>
+            <input name="phone" class="login-password" type="text" placeholder="Phone NO."></input>
+            <input name="amount" class="login-email" type="number" placeholder="Item"></input>
+            <input name="email" class="login-password" type="email" placeholder="email"></input>
+            <input name="description" class="oredr-desc" type="textfield" placeholder="description"></input>
+            <input name="submit" type="submit" class="order-form-btn"></input>
         </form>
     </div>
 
