--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -22,6 +22,14 @@
 
 <hr class="horz">
 
+    {% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+
       <!-- products -->
       <div class="product-box">
 
