--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -4,7 +4,7 @@
 
 <!-- products -->
   <!-- log in -->
-  <div class="login">
+  <!-- <div class="login">
 
     <form>
     <input class="login-email" type="text" placeholder="email"></input>
@@ -15,10 +15,18 @@
     <button class="btn-auth"  >Log In</button>
     <button class="btn-auth"  >Sign Up</button>
 
-    <!-- <p> <a href="#">Forgot password?</a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Don't have an account?  <a href="#"> Sign up!</a></p> -->
+    <p> <a href="#">Forgot password?</a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Don't have an account?  <a href="#"> Sign up!</a></p>
+
+</div> -->
+<!-- log in end -->
+
+<div class="top">
+  <h1>Senper Graphics</h1>
+  <h4>Where your eyes enjoy creativity!</h4>
+  <button class="btn-auth"  >Learn</button>
+  <button class="btn-auth"  >Order</button>
 
 </div>
-<!-- log in end -->
 
 <hr class="horz">
 
