--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -18,7 +18,9 @@
         <div class="types-box col-6">
             <ul class="types">
                 <li>
-                    Branding
+                    <a href=" {% url 'tutorials' %} ">
+                        courses
+                    </a>
                 </li>
                 <li>
                     Tshirt
