configure model for tutorial

--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -2,6 +2,24 @@
  {% load static%}
 {% block content %}
 
-<h1 class="item-title">About Us</h1>
+<!-- https://www.youtube.com/embed/1JFG_-LbMJk -->
+
+<div class="about">
+    <div class="about-detail">
+
+    </div>
+
+    <div class="about-designers">
+        <div class="about-designer">
+
+        </div>
+        <div class="about-designer">
+            
+        </div>
+        <div class="about-designer">
+            
+        </div>
+    </div>
+</div>
 
 {% endblock %}
