--- a/sapphire/static/css/style.css
+++ b/sapphire/static/css/style.css
@@ -375,16 +375,51 @@ a {
     flex: content; 
   }
 
+  .tutorial-main h3{
+      font-weight: lighter;
+  }
+
   .tutorials-side{
       flex: 22%;
       display: flex;
-      flex-flow: column;
-      margin: 0px 40px;
+      flex-wrap: wrap;
+      margin: 0px 30px;
+      justify-items: center;
   }
 
   .tutorials-side iframe{
 
   }
+
+  .thumbnail{
+    margin-bottom: 20px;
+    margin-left: 20px;
+    flex: 22%;
+    /* box-shadow: 0px 3px 5px 1px rgba(46, 46, 46, 0.5); */
+  }
+
+  .thumbnail {
+      max-width: 6cm;
+      /* height: auto; */
+  }
+
+  .thumbnail img{
+      width: 100%;
+      object-fit: cover;
+      object-position: center;
+    border: solid #464646 1px;
+  }
+
+  .thumbnail p{
+      margin: 5px;
+      text-decoration: none;
+      color: #464646;
+  }
+
+  .thumbnail .product:hover{
+      font-weight: bold;
+  }
+
 
   @media (max-width: 900px) {
       .types{
