adding minor correction

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -23,8 +23,12 @@
 <div class="top">
   <h1>Senper Graphics</h1>
   <h4>Where your eyes enjoy creativity!</h4>
-  <button class="btn-auth"  >Learn</button>
-  <button class="btn-auth"  >Order</button>
+  
+  <a href="{% url 'tutorials' %}">
+  <button class="btn-auth"  >
+      Learn Graphics
+  </button>
+  </a>
 
 </div>
 
