--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
 
-    <title>Sapphire Graphics</title>
+    <title>Senper Graphics</title>
 </head>
 <body>
     
