fixing order page & other minors

--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -2,9 +2,10 @@
 {% load static %}
 
 {% block branding %}
-    <div id="head">
+    <h1 id="head">
         <img src="{% static '/img/logo.png' %}" alt="" style="width: 40px;">
-    </div>
+        Senper Graphics
+    </h1>
 {% endblock %}
 
 {% block extrastyle %}
