--- a/templates/order/order.html
+++ b/templates/order/order.html
@@ -12,7 +12,7 @@
             <input name="item" class="login-email" type="text" placeholder="Item"></input>
             <input name="client" class="login-password" type="text" placeholder="Client"></input>
             <input name="phone" class="login-password" type="text" placeholder="Phone NO."></input>
-            <input name="amount" class="login-email" type="number" placeholder="Item"></input>
+            <input name="amount" class="login-email" type="number" placeholder="Amount"></input>
             <input name="email" class="login-password" type="email" placeholder="email"></input>
             <input name="description" class="oredr-desc" type="textfield" placeholder="description"></input>
             <input name="submit" type="submit" class="order-form-btn"></input>
