--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -9,19 +9,19 @@
                 <a href=" {% url 'index' %} ">
                     <img class="logo" src="{% static 'img/logo.png' %}" alt="">
                 </a> 
-                <!-- <p> Sapphire </p> -->
+                <p> <b>Senper</b> Graphics </p>
             </div>
 
             <div class="order ">
 
                 <a href="{% url 'order' %}">
-                    <button class="btn-auth"  >
+                    <button class="nav-btn-order"  >
                         Order
                     </button>
                 </a>
 
                 <a href="{% url 'about' %}">
-                    <button class="btn-auth"  >
+                    <button class="nav-btn-about"  >
                         About Us
                     </button>
                 </a>
