--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -15,19 +15,24 @@
         </p>
     </div>
 
+    
     <div class="about-designers">
-        <div class="about-designer">
-            <div class="about-avatar">
-                <img src=" {% static 'img/avatar.jpg' %} " alt="">
-                <div class="about-avatar-title">
-                    <h4>Barch barch barch</h4>
-                    <p>software enginer</p>
+        <a href="{% url 'designer' 'barch' %}"></a>
+            <div class="about-designer">
+                <div class="about-avatar">
+                    <img src=" {% static 'img/avatar.jpg' %} " alt="">
+                    <div class="about-avatar-title">
+                        <h4>Barch barch barch</h4>
+                        <p>software enginer</p>
+                    </div>
                 </div>
+                <p class="about-designer-detail">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean posuere tortor in pulvinar lacinia. Fusce eget odio a ex fermentum semper. Nam laoreet nibh sit amet egestas mollis. Nulla ac felis turpis. Nullam semper varius orci, eget ultrices elit feugiat et. Integer facilisis vel libero nec condimentum. Aenean ut elit felis.
+                </p>
             </div>
-            <p class="about-designer-detail">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean posuere tortor in pulvinar lacinia. Fusce eget odio a ex fermentum semper. Nam laoreet nibh sit amet egestas mollis. Nulla ac felis turpis. Nullam semper varius orci, eget ultrices elit feugiat et. Integer facilisis vel libero nec condimentum. Aenean ut elit felis.
-            </p>
-        </div>
+        </a>
+
+
         <div class="about-designer">
             
         </div>
