--- a/templates/pages/item.html
+++ b/templates/pages/item.html
@@ -5,7 +5,10 @@
 
     <div class="item-header">
         <p class="item-title">{{item.client}} /</p>
-        <p class="item-designer">By <a href=" {% url 'designer' item.designer %} "> {{item.designer}} </a>/ {{ item.item }} </p>
+        <p class="item-designer">By 
+                <a href=" {% url 'designer' item.designer %} "> 
+                    {{ item.designer }}
+                </a>/ {{ item.item }} </p>
     </div>
 
     <hr class="item-hr">
